<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartAssistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- LIST ACTIVITY -->
    <string name="action_view_map">View on map</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select all</string>
    <string name="list_title">List</string>

    <!-- MAP ACTIVITY -->
    <string name="find_location_btn">Search</string>
    <string name="find_location_hint">Find an address</string>
    <string name="loading_map_error">Sorry! Unable to fetch maps</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_view_as_list">View as a list</string>

    <!-- DETAILS ACTIVITY -->
    <string name="title_activity_details">DetailsActivity</string>
    <string name="location">Location</string>
    <string name="save_reminder_btn">Save reminder</string>
    <string name="enter_text_hint">Enter the reminder here</string>
    <string name="successfully_added">Reminder saved successfully</string>
    <string name="reminder_not_added">An error occurred, reminder not saved</string>
    <string name="successfully_edited">Reminder edited successfully</string>
    <string name="reminder_not_edited">An error occurred. Reminder not edited</string>
    <string name="radius">Radius</string>
    <string name="meters">meters</string>
    <string name="toggle_alarm">Toggle alarm on or off</string>
    <string name="kilometers">kilometers</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_test">Test</string>
    <string name="error_no_marker_selected">No reminder selected</string>
    <string name="remove_confirmation">Are you sure you want to delete this reminder?</string>
    <string name="erro_no_reminder_text_entered">You must provide a reminder text</string>
    <string name="estimated_address">Estimated address</string>
    <string name="error_address_could_not_be_found">couldn\'t find address</string>
    <string name="error_choose_one_reminder">Please choose one reminder to edit</string>
    <string name="error_choose_only_one_reminder">Please choose only one reminder to edit</string>
    <string name="title_activity_details_activity_time">DetailsActivityTime</string>
    <string name="error_no_actions_added">Add at least one action to save the task</string>
    <string name="enter_task_name">Enter task name here</string>
    <string name="add_action_btn">Add action</string>
    <string name="reminder">Reminder</string>
    <string name="wifi">Wifi</string>
    <string name="ringtone_volume">Ringtone volume</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_reminder_action_title">Notification</string>
    <string name="location_trigger_title">Location trigger</string>
    <string name="entering">Entering</string>
    <string name="exiting">Leaving</string>
    <string name="alarm_action_title">Action: alarm</string>
    <string name="fullscreen_alarm_title">Fullscreen alarm</string>

    <!-- PROGRESS INDICATOR -->
    <string name="fetching_data">Fetching data...</string>
    <string name="update_success">Update successful</string>
    <string name="update_error">An error occured, task not updated</string>
    <string name="remove_success">Deleted successfully</string>
    <string name="remove_error">An error occured, task not deleted</string>
    <string name="title_activity_fullscreen_alarm">FullscreenAlarmActivity</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="ringer_volume_title">Change ringer volume</string>
    <string name="volume">Volume:</string>
    <string name="silent">Silent</string>

</resources>
